# capn-console

./: README.md  package-lock.json  package.json  sample.capnp  vite.config.ts
src/: App.tsx  HexDump.tsx  Visualizer.tsx  index.css
wasm-core/: Cargo.toml
wasm-core/src/: lib.rs
web-ui/: package-lock.json  package.json
web-ui/src/: App.tsx  FieldNode.tsx
